Add data to controllers from views

--- a/app_server/views/location-review-form.jade
+++ b/app_server/views/location-review-form.jade
@@ -3,7 +3,7 @@ extends layout
 block content
   .row.page-header
     .col-lg-12
-      h1 Review Starcups
+      h1 Review #{locationHeader.name}
   .row
     .col-xs-12.col-md-6
       form.form-horizontal(action="/clocation", method="get", role="form")
@@ -15,11 +15,8 @@ block content
           label.col-xs-10.col-sm-2.control-label(for="rating") Rating
           .col-xs-12.col-sm-2
             select#raiting.form-control.input-sm(name="rating")
-              option 5
-              option 4
-              option 3
-              option 2
-              option 1
+              - for (var i = 5; i >= 1; i--)
+                option= i              
         .form-group
           label.col-sm-2.control-label(for="review") Review
           .col-sm-10
