--- a/app_server/views/generic-text.jade
+++ b/app_server/views/generic-text.jade
@@ -7,8 +7,4 @@ block content
         h1= title
   .row
     .col-md-6.col-sm-12
-      p
-        | Loc8r was created to help people find places to sit down and get a bit of work done.
-        | <br /><br />
-        | Lorem Iplsum eewg gwgwgrgerg gwerg5gegfsn gfng bwd/
-
+      p!= text
