--- a/app_server/views/locations-list.jade
+++ b/app_server/views/locations-list.jade
@@ -1,122 +1,28 @@
+include _includes/sharedHTMLFunctions
+
 extends layout
 
 block content
   #banner.page-header
     .row
       .col-lg-6
-        h1 Loc8r
-          small &nbsp; Find place to work with wifi near you!
+        h1= pageHeader.title
+          small &nbsp;#{pageHeader.strapline} 
   .row
     .col-xs-12.col-sm-8
       .row.list-group
-        .col-xs-12.list-group-item
-          h4
-            a(href="/location") Starcups
-            small &nbsp;
-              span.glyphicon.glyphicon-star
-              span.glyphicon.glyphicon-star
-              span.glyphicon.glyphicon-star
-              span.glyphicon.glyphicon-star
-              span.glyphicon.glyphicon-star
-            span.badge.pull-right.badge-default 100m
-          p.address 125 High Street? Reading? RG6 1PS
-          p
-            span.label.label-warning Hot drinks
-            &nbsp;
-            span.label.label-warning Food
-            &nbsp;
-            span.label.label-warning Premium WiFi
-            &nbsp;
-        .col-xs-12.list-group-item
-          h4
-            a(href="/location") Starcups
-            small &nbsp;
-              span.glyphicon.glyphicon-star
-              span.glyphicon.glyphicon-star
-              span.glyphicon.glyphicon-star
-              span.glyphicon.glyphicon-star
-              span.glyphicon.glyphicon-star
-            span.badge.pull-right.badge-default 100m
-          p.address 125 High Street? Reading? RG6 1PS
-          p
-            span.label.label-warning Hot drinks
-            &nbsp;
-            span.label.label-warning Food
-            &nbsp;
-            span.label.label-warning Premium WiFi
-            &nbsp;
-        .col-xs-12.list-group-item
-          h4
-            a(href="/location") Starcups
-            small &nbsp;
-              span.glyphicon.glyphicon-star
-              span.glyphicon.glyphicon-star
-              span.glyphicon.glyphicon-star
-              span.glyphicon.glyphicon-star
-              span.glyphicon.glyphicon-star
-            span.badge.pull-right.badge-default 100m
-          p.address 125 High Street? Reading? RG6 1PS
-          p
-            span.label.label-warning Hot drinks
-            &nbsp;
-            span.label.label-warning Food
-            &nbsp;
-            span.label.label-warning Premium WiFi
-            &nbsp;
-        .col-xs-12.list-group-item
-          h4
-            a(href="/location") Starcups
-            small &nbsp;
-              span.glyphicon.glyphicon-star
-              span.glyphicon.glyphicon-star
-              span.glyphicon.glyphicon-star
-              span.glyphicon.glyphicon-star
-              span.glyphicon.glyphicon-star
-            span.badge.pull-right.badge-default 100m
-          p.address 125 High Street? Reading? RG6 1PS
-          p
-            span.label.label-warning Hot drinks
-            &nbsp;
-            span.label.label-warning Food
-            &nbsp;
-            span.label.label-warning Premium WiFi
-            &nbsp;
-        .col-xs-12.list-group-item
-          h4
-            a(href="/location") Starcups
-            small &nbsp;
-              span.glyphicon.glyphicon-star
-              span.glyphicon.glyphicon-star
-              span.glyphicon.glyphicon-star
-              span.glyphicon.glyphicon-star
-              span.glyphicon.glyphicon-star
-            span.badge.pull-right.badge-default 100m
-          p.address 125 High Street? Reading? RG6 1PS
-          p
-            span.label.label-warning Hot drinks
-            &nbsp;
-            span.label.label-warning Food
-            &nbsp;
-            span.label.label-warning Premium WiFi
-            &nbsp;
-        .col-xs-12.list-group-item
-          h4
-            a(href="/location") Starcups
-            small &nbsp;
-              span.glyphicon.glyphicon-star
-              span.glyphicon.glyphicon-star
-              span.glyphicon.glyphicon-star
-              span.glyphicon.glyphicon-star
-              span.glyphicon.glyphicon-star
-            span.badge.pull-right.badge-default 100m
-          p.address 125 High Street? Reading? RG6 1PS
-          p
-            span.label.label-warning Hot drinks
-            &nbsp;
-            span.label.label-warning Food
-            &nbsp;
-            span.label.label-warning Premium WiFi
-            &nbsp;                    
+        each location in locations
+          .col-xs-12.list-group-item
+            h4
+              a(href="/location")= location.name
+              small &nbsp;
+              +outputRating(location.rating)                  
+              span.badge.pull-right.badge-default= location.distance
+            p.address= location.address
+            p
+              each facility in location.facilities
+                span.label.label-warning= facility
+                | &nbsp;        
     .col-xs-12.col-sm-4
-      p.lead Loc8r helps you find places to work when out and about Loc8r helps you find places to work when out and about Loc8r helps you find places to work when out and about Loc8r helps you find places to work when out and about
+      p.lead= pageHeader.sidebar
 
