--- a/app_server/views/location-info.jade
+++ b/app_server/views/location-info.jade
@@ -17,7 +17,8 @@ block content
             .panel-heading
               h2.panel-title Opening hours
             .panel-body
-              +openTime(locationData.opens)              
+              //+openTime(locationData.opens)
+              +openingTime(locationData.openingTimes)
           .panel.panel-primary
             .panel-heading
               h2.panel-title Facilities
