--- a/app_server/views/location-review-form.jade
+++ b/app_server/views/location-review-form.jade
@@ -3,10 +3,10 @@ extends layout
 block content
   .row.page-header
     .col-lg-12
-      h1 Review #{locationHeader.name}
+      h1 #{locationHeader.name}
   .row
     .col-xs-12.col-md-6
-      form.form-horizontal(action="/clocation", method="get", role="form")
+      form.form-horizontal(action="", method="post", role="form")
         .form-group
           label.col-xs-10.col-sm-2.control-label(for="name") Name
           .col-xs-12.col-sm-10
