--- a/app_server/views/layout.jade
+++ b/app_server/views/layout.jade
@@ -27,3 +27,4 @@ html
             small &copy; JazzzDima 2020  
     script(src='/javascripts/jquery.min.js')
     script(src='/bootstrap/js/bootstrap.min.js')
+    script(src='/javascripts/validation.js')
