--- a/app_server/views/location-review-form.jade
+++ b/app_server/views/location-review-form.jade
@@ -6,7 +6,7 @@ block content
       h1 #{locationHeader.name}
   .row
     .col-xs-12.col-md-6
-      form#addReview.form-horizontal(action="", method="post", role="form")
+      form#addReview.form-horizontal(action="#{url}", method="post", role="form")
         -if (error == "val")
           .alert.alert-danger(role="alert") All fields required, try again.
         .form-group
