--- a/app_server/views/layout.jade
+++ b/app_server/views/layout.jade
@@ -19,14 +19,19 @@ html(ng-app='loc8rApp')
           ul.nav.navbar-nav
             li
              a(href='/about/') About
-    .container         
-      block content
-      footer
-        .row
-          .col-xs-12
-            small &copy; JazzzDima 2020
+    .container
+      div(ng-view)         
+        block content
+        footer
+          .row
+            .col-xs-12
+              small &copy; JazzzDima 2020
     script(src='/angular/angular.min.js')
-    script(src='/angular/loc8rApp.js')
+    script(src='/lib/angular-route.min.js')
+    //script(src='/angular/loc8rApp.js')
+    script(src='/app.js')
+    script(src='/home/home.controller.js')
+    
     script(src='/javascripts/jquery.min.js')
     script(src='/bootstrap/js/bootstrap.min.js')
     script(src='/javascripts/validation.js')
