--- a/app_server/views/layout.jade
+++ b/app_server/views/layout.jade
@@ -27,10 +27,15 @@ html(ng-app='loc8rApp')
             .col-xs-12
               small &copy; JazzzDima 2020
     script(src='/angular/angular.min.js')
-    script(src='/lib/angular-route.min.js')
+    //script(src='/lib/angular-route.min.js')
     //script(src='/angular/loc8rApp.js')
-    script(src='/app.js')
-    script(src='/home/home.controller.js')
+    //script(src='/app.js')
+    //script(src='/home/home.controller.js')
+    //script(src='/common/services/loc8rData.service.js')
+    //script(src='/common/services/geolocation.service.js')
+    //script(src='/common/directive/ratingStars/ratingStars.directive.js')
+    //script(src='/common/filters/formatDistance.filter.js')
+    script(src='/angular/loc8r.min.js')
     
     script(src='/javascripts/jquery.min.js')
     script(src='/bootstrap/js/bootstrap.min.js')
